# FacialExpressionRecognition

./: .gitignore  main.py  pyproject.toml
converter/: img_converter.py
learning/: csv_parser.py
learning/models/: augmentation.py  res_net.py
