[tool.poetry]
name = "softarex"
version = "0.1.0"
description = ""
authors = ["Nitroxt5 <filippov.maxim52@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
tensorflow = "^2.11.0"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
